<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="false"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="10dp"
        android:weightSum="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/tvBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/begin_date"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:id="@+id/etBeginDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:editable="false"
                android:hint="@string/date_choice"
                android:inputType="date"
                android:onClick="onOpenDatePicker"
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <TextView
                android:id="@+id/tvSort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginRight="20dp"
                android:text="@string/sort_order"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="false"
                android:layout_toRightOf="@+id/tvSort"
                android:layout_toEndOf="@+id/tvSort"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:id="@+id/rgSort">

                <RadioButton
                    android:id="@+id/rbNewest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/newest" />

                <RadioButton
                    android:id="@+id/rbOldest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:checked="false"
                    android:text="@string/oldest" />

            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="364dp"
            android:layout_height="130dp"
            android:layout_weight="0.40">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/filter_news_desk"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <CheckBox
                android:id="@+id/cbArts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/arts"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/textView2"
                android:layout_toEndOf="@+id/textView2"
                android:layout_marginLeft="62dp"
                android:layout_marginStart="62dp" />

            <CheckBox
                android:id="@+id/cbFashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/fashionAndStyle"
                android:layout_below="@+id/cbArts"
                android:layout_alignLeft="@+id/cbArts"
                android:layout_alignStart="@+id/cbArts" />

            <CheckBox
                android:id="@+id/cbSports"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/cbFashion"
                android:layout_alignStart="@+id/cbFashion"
                android:layout_below="@+id/cbFashion"
                android:checked="false"
                android:text="@string/sports" />


            <Button
                android:id="@+id/btnSave"
                android:layout_width="131dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:onClick="onSave"
                android:text="@string/save"
                android:textColor="#FFF"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>


    </LinearLayout>

</RelativeLayout>
